<resources>
    <string name="app_name">Blood Pressure</string>
    <string name="title_settings">Settings</string>
    <string name="stage_2_title">Stage 2 hypertension</string>
    <string name="stage_2_value"><![CDATA[SIS. > 160 or DIA. > 100]]></string>
    <string name="stage_1_title">Stage 1 hypertension</string>
    <string name="stage_1_value">SIS. 141–160 or DIA. 91–100</string>
    <string name="prehypertension_title">Prehypertension</string>
    <string name="prehypertension_value">SIS. 121–140 or DIA. 81-90</string>
    <string name="normal_title">Normal</string>
    <string name="normal_value">SIS. 91–120 or DIA. 61-80</string>
    <string name="hypotension_title">Hypotension</string>
    <string name="hypotension_value"><![CDATA[SIS. < 90 or DIA. < 60]]></string>
    <string name="type_column_name_text_value" />
    <string name="systolic_column_name_text_value">Systolic</string>
    <string name="diastolic_column_name_text_value">Diastolic</string>
    <string name="stage_2_type_row_text_value">Stage 2</string>
    <string name="stage_2_systolic_row_text_value"><![CDATA[> 160]]></string>
    <string name="stage_2_diastolic_row_text_value"><![CDATA[> 100]]></string>
    <string name="stage_1_type_row_text_value">Stage 1</string>
    <string name="stage_1_systolic_row_text_value">141 - 160</string>
    <string name="stage_1_diastolic_row_text_value">91- 100</string>
    <string name="prehypertension_systolic_row_text_value">121 - 140</string>
    <string name="prehypertension_diastolic_row_text_value">81-90</string>
    <string name="normal_systolic_row_text_value">91-120</string>
    <string name="normal_diastolic_row_text_value">61-80</string>
    <string name="hypotension_systolic_row_text_value"><![CDATA[< 90]]></string>
    <string name="hypotension_diastolic_row_text_value"><![CDATA[< 60]]></string>
    <string name="notes_edit_text_hint">Write your notes</string>
    <string name="systolic_text_view_value">Systolic</string>
    <string name="diastolic_text_view_value">Diastolic</string>
    <string name="pulse_text_view_value">Pulse</string>
    <string name="diagnosis_title_text_value">Normal</string>
    <string name="diagnosis_value_text_value">SIS. 91-120 or DIA. 61-80</string>
    <string name="all_time">All time</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_14_days">Last 14 days</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="last_60_days">Last 60 days</string>
    <string name="last_90_days">Last 90 days</string>
    <string name="all_records">All records</string>
    <string name="records">records</string>
    <string name="reminders_title">Reminders</string>
    <string name="notification_channel_name">Blood Pressure Diary</string>
    <string name="notification_channel_id">Blood Pressure Diary Id</string>
    <string name="notification_channel_description">Time to measure your blood pressure AND get your medicament</string>
    <string name="notification_medication_title">Time to take your medication</string>
    <string name="notification_measurement_title">Time to check your blood pressure</string>
    <string name="measure_it_now">MEASURE IT NOW</string>
    <string name="when">When</string>
    <string name="after_given_days_without_new_measurements">After given days without new measurements</string>
    <string name="reminders">Reminders</string>
    <string name="when_to_send_reminders">When to send reminders</string>
    <string name="all_relevant_info_about_the_app">All relevant info about the app</string>
    <string name="statistic">Statistic</string>
    <string name="settings">Settings</string>
    <string name="data">Data</string>
    <string name="statistics">Statistics</string>
    <string name="measurement_reminder">Measurement reminder</string>
    <string name="which_time">Which time</string>
    <string name="medication_reminder">Medication reminder</string>
    <string name="today">Today</string>
    <string name="custom">Custom</string>
    <string name="oops">Oops</string>
    <string name="no_data_found">No Data Found</string>
    <string name="get_started">Get started</string>
    <string name="add_new_record">Add a new record by tapping the + button</string>
    <string name="share">Share</string>
    <string name="confirm_delete_data">Are you sure you want to delete all the data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="data_successfully_restored">Data has been successfully restored</string>
    <string name="error_ocurred">An error occurred</string>
    <string name="successfully_deleted">Data has been successfully deleted</string>
    <string name="create_backup">Create backup</string>
    <string name="save_backup_internally_or_externally">Save backup internally or externally</string>
    <string name="restore_previously_created_backup">Restore previously created backup</string>
    <string name="restore_backup">Restore backup</string>
    <string name="delete_data">Delete data</string>
    <string name="delete_all_records">Delete all records</string>
    <string name="first_reminder">First reminder</string>
    <string name="second_reminder">Second reminder</string>
    <string name="third_reminder">Third reminder</string>
    <string name="google_play_url">https://play.google.com/store/apps/details?id=com.oliversolutions.dev.bloodpressurediary</string>
    <string name="privacy_policy_url">https://oliversolutions.dev/privacy-policy/</string>
    <string name="grant_this_permission">You need to grant this permission in order to use this functionality</string>
    <string name="bp_intersticial">ca-app-pub-1745753438560013/4007437938</string>
    <string name="how_often_per_day">How often per day</string>
    <string name="create_backups_restore_them_delete_data">Create backups, restore them, delete data</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_us_description">If you like the app please rate us with 5 stars to support us</string>
    <string name="privacy_policy_description">Privacy policy</string>
    <string name="blood_pressure_diary">Blood pressure diary</string>
    <string name="edit_record">Edit record</string>
    <string name="add_new_record_nav">New record</string>
    <string name="stage_2_legend_title">Stage 2</string>
    <string name="prehypertension_legend_title">Prehypertension</string>
    <string name="normal_legend_title">Normal</string>
    <string name="hypotension_legend_title">Hypotension</string>
    <string name="stage_1_legend_title">Stage 1</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="average">Average</string>
    <string name="opinion_matters">Your opinion matters to us!</string>
    <string name="we_work_hard">We work super hard to serve you better and would love to know how would you rate our app?</string>
    <string name="rate_us_button">Rate Us</string>
    <string name="blood_pressure_saved">Valor de presión arterial guardado!</string>
    <string name="record_removed">Record deleted!</string>
</resources>