<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="75dp">

            <LinearLayout
                android:id="@+id/create_backup_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="35dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/create_backup_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_grey"
                    android:paddingTop="10dp"
                    app:tint="@color/dark_grey"
                    app:srcCompat="@drawable/ic_create_backup" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:id="@+id/create_backup_title_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_backup"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/create_backup_description_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/save_backup_internally_or_externally"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/restore_backup_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="35dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/restore_backup_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    app:srcCompat="@drawable/ic_restore_backup"
                    app:tint="@color/dark_grey" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:id="@+id/restore_backup_title_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restore_backup"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/restore_backup_description_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/restore_previously_created_backup"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/delete_data_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="35dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/delete_data_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    app:srcCompat="@drawable/ic_delete_data"
                    app:tint="@color/dark_grey" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:id="@+id/delete_data_title_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_data"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/delete_data_description_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/delete_all_records"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>