<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/dark_grey"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/settings_picture_app"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    app:srcCompat="@mipmap/ic_blood_pressure_diary_logo_foreground" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/reminders_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="35dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/reminders_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    app:srcCompat="@drawable/ic_notifications"
                    app:tint="@color/dark_grey" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:id="@+id/reminders_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminders"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/reminders_description"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/when_to_send_reminders"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="35dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/data_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    app:srcCompat="@drawable/ic_data"
                    app:tint="@color/dark_grey" />

                <LinearLayout
                    android:id="@+id/data_linear_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:id="@+id/data_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/data_description"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/create_backups_restore_them_delete_data"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="35dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/rate_us_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    app:srcCompat="@drawable/ic_rate_us"
                    app:tint="@color/dark_grey" />

                <LinearLayout
                    android:id="@+id/rate_us_linear_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:id="@+id/rate_us_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate_us"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/rate_us_description"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/rate_us_description"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="35dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/privacy_policy_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    app:srcCompat="@drawable/ic_policy_privacy"
                    app:tint="@color/dark_grey" />

                <LinearLayout
                    android:id="@+id/privacy_policy_linear_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:id="@+id/privacy_policy_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/privacy_policy_description"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    app:srcCompat="@mipmap/ic_oliversolutions_foreground" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>